# video-janitor

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
docs/plans/: 2025-12-05-video-janitor-design.md
docs/superpowers/plans/: 2026-05-19-related-events.md
docs/superpowers/specs/: 2026-05-19-related-events-design.md
migrations/: 001_initial_schema.sql  002_relays_master_table.sql  003_related_events.sql  004_relay_video_relation_sync.sql  005_lifecycle_status.sql  006_relay_active_flag.sql
src/: config.rs  db.rs  lib.rs  main.rs  parser.rs  pipeline.rs  relay_access.rs  stage1_collection.rs  stage2_processing.rs  stage3_validation.rs  stage4_filter_generation.rs  stage5_related_events.rs
