[package]
name = "video-janitor"
version = "0.1.0"
edition = "2021"

[lib]
name = "video_janitor"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Nostr
nostr-sdk = "0.35"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "json", "chrono"] }

# HTTP client
reqwest = { version = "0.12", features = ["rustls-tls"] }

# Job scheduling
tokio-cron-scheduler = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Configuration
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Filtering
xorf = { version = "0.11", features = ["serde"] }
base64 = "0.22"
chrono = "0.4"
bincode = "1.3"
